Realigned right side elements; fixed nav tab styling.

--- a/media/css/lightbox.css
+++ b/media/css/lightbox.css
@@ -167,7 +167,7 @@ input.text {
 }
 
 #lightbox .resources-lightbox-content .nootabs-selected-tab div.group {
-    min-height: 265px;   
+    min-height: 275px;   
 }
 
 #lightbox .resources-lightbox-content {
